# itu-draweasy

./: README.md  meson.build  shell.nix
resources/: resources.gresource.xml
src/: draw-controller.cpp  draw-controller.hpp  draw-model.cpp  draw-model.hpp  draw-view.cpp  draw-view.hpp  main.cpp  utils.hpp
src/.cache/clangd/index/: draw-controller.cpp.2AABF5F24D74C022.idx  draw-controller.cpp.F629DABC2E2AC1A6.idx  draw-controller.hpp.8CB3EA67D49D2280.idx  draw-controller.hpp.DE67795EE587282C.idx  draw-model.cpp.5A22DD62383AF994.idx  draw-model.cpp.99F35A6331934C43.idx  draw-model.hpp.284B072BF8627996.idx  draw-model.hpp.5784A04EDDB1E46F.idx  draw-view.cpp.38A47EE41243E9D7.idx  draw-view.cpp.44ACA02BC318F7E3.idx  draw-view.hpp.272C2F748322FF2C.idx  draw-view.hpp.6D08C3D1AEC4346A.idx  main.cpp.330C573DBAE577B7.idx  main.cpp.5210EB58AACB337A.idx  utils.hpp.4D066F91C42A646D.idx  utils.hpp.DBE318663B26BA82.idx
ui/: main.cmb  main.ui
ui/backup/: design.cmb  main.cmb  main.ui
